# bag2rrd

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yml  compass.yml
.github/workflows/: ci.yml
src/: cli.rs  convert.rs  lib.rs  main.rs  rosbags_io.rs  rrd_writer.rs  schema.rs  validate.rs
src/mappings/: gps.rs  images.rs  imu.rs  laserscan.rs  mod.rs  nav.rs  pointcloud.rs  tf.rs
tests/: cli_help.rs  download_test_bag.bat  download_test_bag.sh  inspect_and_convert.rs  integration_tests.rs  version.rs
