[package]
name = "bag2rrd"
version = "0.5.0"
edition = "2024"
description = "CLI tool to convert ROS1 .bag files into Rerun .rrd files (rosbag=0.6.3, rerun=0.25.1)"
authors = ["Groupe CARVI <dev@groupe-carvi.ai>"]
license = "Apache-2.0"

[lib]
name = "bag2rrd"
path = "src/lib.rs"

[features]
default = []
integration-tests = []

[dependencies]
rosbag = "0.6.3"
rerun = {version = "0.25.1", default-features = false, features = ["sdk"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18.0"
regex = "1.11.3"
image = "0.25.8"
prettytable-rs = "0.10"
nalgebra = "0.34.1"
rayon = "1.10"
flume = "0.11"
once_cell = "1.19"
smallvec = "1.11"
ordered-float = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
